<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sunny_back"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainText"
        android:layout_width="200dp"
        android:layout_height="124dp"
        android:layout_gravity="top|center"
        android:fontFamily="@font/open_sans_extrabold"
        android:gravity="center|bottom"
        android:textColor="#FFFFFF"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169" />
    <TextView
        android:id="@+id/additionalInfo"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginTop="0dp"
        android:textSize="15sp"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/open_sans_extrabold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/mainText"
        app:layout_constraintStart_toStartOf="@+id/mainText"
        app:layout_constraintTop_toBottomOf="@+id/mainText" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:id="@+id/dayFragment"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="0dp">

        </FrameLayout>

        <LinearLayout
            android:id="@+id/info_tv"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bWindSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:alpha="1"
                    android:background="#CBCBCB"
                    android:clickable="false"
                    android:fontFamily="@font/ubuntu_bold"
                    android:gravity="center"
                    android:text="@string/windSpeed"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    app:backgroundTint="@null">
                </androidx.appcompat.widget.AppCompatButton>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/b_precip_prob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:alpha="1"
                    android:background="@drawable/info_left"
                    android:clickable="false"
                    android:fontFamily="@font/ubuntu_bold"
                    android:gravity="center"
                    android:text="@string/precip_probability"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    app:backgroundTint="@null">
                </androidx.appcompat.widget.AppCompatButton>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bPressure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:alpha="1"
                    android:background="#CBCBCB"
                    android:clickable="false"
                    android:fontFamily="@font/ubuntu_bold"
                    android:gravity="center"
                    android:text="@string/pressure"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    app:backgroundTint="@null">
                </androidx.appcompat.widget.AppCompatButton>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bHumidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:alpha="1"
                    android:background="@drawable/info_right"
                    android:clickable="false"
                    android:fontFamily="@font/ubuntu_bold"
                    android:gravity="center"
                    android:text="@string/humidity"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    app:backgroundTint="@null">
                </androidx.appcompat.widget.AppCompatButton>

            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/info_fragment"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:visibility="gone">

        </FrameLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:gravity="center|start"
        android:fontFamily="@font/ubuntu_bold"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dark"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@color/black"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/city_field"
        android:layout_width="250sp"
        android:layout_height="100sp"
        app:cardCornerRadius="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="15"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="left"
            android:hint="@string/city"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <Button
            android:id="@+id/bCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:backgroundTint="#CBCBCB"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/set"
            android:textAllCaps="false" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>